Updates to the draft paper.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -131,11 +131,6 @@
   note={\url{http://www3.cs.utwente.nl/~michaelw/nips/}},
 }
 
-@misc{spin,
-  title={{On-the-fly LTL Model Checking With Spin}},
-  note={\url{http://spinroot.com/spin/whatispin.html}},
-}
-
 @misc{noll2004fnv,
   title={{Fowler/Noll/Vo (FNV) hash}},
   author={Noll, L.C.},
@@ -182,10 +177,22 @@
   publisher={Springer}
 }
 
+@book{holzmann2004smc,
+  title={{The Spin Model Checker: Primer and Reference Manual}},
+  author={Holzmann, G.J.},
+  year={2004},
+  publisher={Addison-Wesley Professional}
+}
+
 
 @article{bayer1970oam,
   title={{Organization and Maintenance of Large Ordered Indices}},
   author={Bayer, R. and McCreight, E.},
   year={1970},
   publisher={DTIC Research Report AD0712079}
+}
+
+@misc{spin,
+  title={{On-the-fly LTL Model Checking With Spin}},
+  note={\url{http://spinroot.com/spin/whatispin.html}},
 }
